Somehow managed to include surefire plugin twice.