@@ -250,15 +250,6 @@
         <sourceDirectory>src/main/groovy</sourceDirectory>
         <plugins>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-				<version>2.7.2</version>
-				<configuration>
-					<forkMode>once</forkMode>
-					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-				</configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.codehaus.gmaven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
                 <version>1.4</version>
@@ -289,6 +280,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.7.2</version>
 				<configuration>
 					<!-- once, never, always, perthread -->
 					<forkMode>once</forkMode>
